# grove

./: .gitignore  ATTRIBUTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  OWNERS  README.md
operator/: .dockerignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  demo.md  go.mod  go.sum  pyproject.toml  skaffold.yaml
operator/api/: Makefile  go.mod  go.sum
operator/api/common/: labels.go  namegen.go  namegen_test.go
operator/api/hack/: generate.sh
operator/charts/: Chart.yaml  values.yaml
operator/charts/templates/: _helpers.tpl  authorizer-webhook-config.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap-operator.yaml  service.yaml  (+13 more)
operator/client/: go.mod  go.sum
operator/cmd/: main.go
operator/docs/: notes.md
operator/e2e/: README.md  architecture.md  dependencies.go  dependencies.yaml  dependencies_test.go
operator/hack/: README.md  add-license-headers.sh  build-initc.sh  build-install-crds.sh  build-operator.sh  build.sh  codegen.sh  deploy-addons.sh  deploy-local.sh  deploy.sh  docker-build-initc.sh  docker-build-operator.sh  docker-build.sh  e2e.yaml  generate-crds.sh  generate-pki.sh  generate.sh  infra-manager.py  kind-down.sh  kind-up.sh  ld-flags.sh  openssl-utils.sh  prepare-charts.sh  prepare-deploy.sh  prepare-local-deploy.sh  requirements.txt  scale-history.py  scale.yaml  tools.mk
operator/initc/: Dockerfile  Dockerfile.dockerignore  config.go  go.mod  go.sum  main.go  order.go
operator/samples/: nim-llm-grove.yaml  nim-llm-multinode-grove.yaml  nim-llm-multinode-lws.yaml  pgs-inorder.yaml
(+880 files in other folders)
