# /*
# Copyright 2026 The Grove Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# */

[project]
name = "grove"
version = "0.1.0-dev"
description = "Kubernetes operator for AI workloads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker==7.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    "sh==2.2.2",
    "tenacity==9.1.4",
    "typer==0.24.1",
]
keywords = ["inference", "kubernetes", "operator", "grove", "dynamo"]

[project.urls]
Repository = "https://github.com/ai-dynamo/grove.git"
